1st-gen/packages/switch/src/spectrum-switch.css
/* ... */
:host([checked]) #input:focus-visible + #switch::before {
  background-color: var(--highcontrast-switch-handle-background-color, var(--mod-switch-handle-background-color-selected-focus, var(--spectrum-switch-handle-background-color-selected-focus)));
  border-color: var(--highcontrast-switch-handle-border-color-selected-focus, var(--mod-switch-handle-border-color-selected-focus, var(--spectrum-switch-handle-border-color-selected-focus)));
}

#input:focus-visible ~ #label {
  color: var(--highcontrast-switch-label-color-focus, var(--mod-switch-label-color-focus, var(--spectrum-switch-label-color-focus)));
}

@media (hover: hover) {
  :host(:hover) #input + #switch::before {
    background-color: var(--highcontrast-switch-handle-background-color, var(--mod-switch-handle-background-color-hover, var(--spectrum-switch-handle-background-color-hover)));
    border-color: var(--highcontrast-switch-handle-border-color-hover, var(--mod-switch-handle-border-color-hover, var(--spectrum-switch-handle-border-color-hover)));
    box-shadow: none;
  }

  :host(:hover) #input + #switch {
    border-color: var(--highcontrast-switch-border-color-hover, var(--mod-switch-border-color-hover, var(--spectrum-switch-border-color-hover)));
  }

  :host(:hover) #input ~ #label {
    color: var(--highcontrast-switch-label-color-hover, var(--mod-switch-label-color-hover, var(--spectrum-switch-label-color-hover)));
  }

  :host([checked]:hover) #input:enabled + #switch {
    background-color: var(--highcontrast-switch-background-color-selected-hover, var(--mod-switch-background-color-selected-hover, var(--spectrum-switch-background-color-selected-hover)));
    border-color: var(--mod-switch-border-color-selected-hover, var(--spectrum-switch-border-color-selected-hover));
  }

  :host([checked]:hover) #input:enabled + #switch::before {
    background-color: var(--highcontrast-switch-handle-background-color, var(--mod-switch-handle-background-color-selected-hover, var(--spectrum-switch-handle-background-color-selected-hover)));
    border-color: var(--highcontrast-switch-handle-border-color-selected-hover, var(--mod-switch-handle-border-color-selected-hover, var(--spectrum-switch-handle-border-color-selected-hover)));
  }

  :host([disabled]:hover) #input + #switch,
  :host([disabled]:hover) #input + #switch {
    background-color: var(--mod-switch-background-color-disabled, var(--spectrum-switch-background-color-disabled));
  }

  :host([disabled]:hover) #input + #switch::before,
  :host([disabled]:hover) #input + #switch::before {
    border-color: var(--highcontrast-switch-handle-border-color-disabled, var(--mod-switch-handle-border-color-disabled, var(--spectrum-switch-handle-border-color-disabled)));
  }

  :host([disabled]:hover) #input ~ #label,
  :host([disabled]:hover) #input ~ #label {
    color: var(--highcontrast-switch-label-color-disabled, var(--mod-switch-label-color-disabled, var(--spectrum-switch-label-color-disabled)));
  }

  :host([disabled][checked]:hover) #input + #switch,
  :host([disabled][checked]:hover) #input + #switch {
    background-color: var(--highcontrast-switch-background-color-selected-disabled, var(--mod-switch-background-color-selected-disabled, var(--spectrum-switch-background-color-selected-disabled)));
  }

  :host([disabled][checked]:hover) #input + #switch::before,
  :host([disabled][checked]:hover) #input + #switch::before {
    border-color: var(--highcontrast-switch-handle-border-color-disabled, var(--mod-switch-handle-border-color-disabled, var(--spectrum-switch-handle-border-color-disabled)));
  }

  :host([disabled][checked]:hover) #input ~ #label,
  :host([disabled][checked]:hover) #input ~ #label {
    color: var(--highcontrast-switch-label-color-disabled, var(--mod-switch-label-color-disabled, var(--spectrum-switch-label-color-disabled)));
  }

  :host(:hover) #input:focus-visible + #switch::after {
    box-shadow: 0 0 0 var(--mod-switch-focus-indicator-thickness, var(--spectrum-switch-focus-indicator-thickness)) var(--highcontrast-switch-focus-indicator-color, var(--mod-switch-focus-indicator-color, var(--spectrum-switch-focus-indicator-color)));
  }

  :host(:hover) #input:focus-visible + #switch::before {
    border-color: var(--highcontrast-switch-handle-border-color-focus, var(--mod-switch-handle-border-color-focus, var(--spectrum-switch-handle-border-color-focus)));
  }

  :host([checked]:hover) #input:focus-visible + #switch::before {
    border-color: var(--highcontrast-switch-handle-border-color-selected-focus, var(--mod-switch-handle-border-color-selected-focus, var(--spectrum-switch-handle-border-color-selected-focus)));
  }

  :host(:hover) #input:focus-visible ~ #label {
    color: var(--highcontrast-switch-label-color-focus, var(--mod-switch-label-color-focus, var(--spectrum-switch-label-color-focus)));
  }
}

:host([checked]) #input + #switch {
  background-color: var(--highcontrast-switch-background-color-selected-default, var(--mod-switch-background-color-selected-default, var(--spectrum-switch-background-color-selected-default)));
  border-color: var(--highcontrast-switch-border-color-selected-default, var(--mod-switch-border-color-selected-default, var(--spectrum-switch-border-color-selected-default)));
}

:host([checked]) #input + #switch::before {
  background-color: var(--highcontrast-switch-handle-background-color, var(--mod-switch-handle-background-color-selected-default, var(--spectrum-switch-handle-background-color-selected-default)));
  border-color: var(--highcontrast-switch-handle-border-color-selected-default, var(--mod-switch-handle-border-color-selected-default, var(--spectrum-switch-handle-border-color-selected-default)));
}

:host([disabled]) #input + #switch,
:host([disabled]) #input + #switch {
  border-color: var(--highcontrast-switch-border-color-default, var(--mod-switch-border-color-default, var(--spectrum-switch-border-color-default)));
}
/* ... */

